--- a/bestoon/settings.py.sample
+++ b/bestoon/settings.py.sample
@@ -120,3 +120,6 @@ USE_TZ = True
 # https://docs.djangoproject.com/en/3.1/howto/static-files/
 
 STATIC_URL = '/static/'
+
+site-key=6LdGzMQZAAAAAFba1jXwPB-FW7g7zrAd6Wg5IelT
+RECAPTCHA_SECRET_KY=""
